# medical-imaging-platform

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: build-images.yml
deploy/: .env.example  SECURITY.md  docker-compose.yml  justfile
deploy/config/: dvh.yaml  imaging-hub.yaml  radiomics.yaml
deploy/monitoring/grafana/dashboards/: pipeline-overview.json
deploy/monitoring/grafana/provisioning/dashboards/: dashboard-provider.yaml
deploy/monitoring/grafana/provisioning/datasources/: datasources.yaml
deploy/postgres/: init_xnat.sh
deploy/radiomics-settings/: Params.yaml
deploy/recipes/: ROI_normalization.yaml  patient_lookup.csv
deploy/xnat/configure/: SCP_receiver.json  project.xml
docs/: TROUBLESHOOTING.md  diagrams.md
scripts/: populate_patient_lookup.py  send_dicom.py  validate_nifti_conversion.py
services/dicom-ingest/: Dockerfile  pyproject.toml
services/dicom-ingest/recipes/: ROI_normalization.yaml  patient_lookup.csv  recipe.dicom  treatment.csv  variables.yaml
services/dicom-ingest/src/dicom_ingest/: __init__.py  __main__.py  api.py  association_tracker.py  background_processor.py  dicom_data.py  nifti_converter.py  queries.py  settings.py  staging.py  store_handler.py
services/dicom-ingest/src/dicom_ingest/anonymization/: __init__.py  anonymizer.py
services/dvh-calculator/: Dockerfile  pyproject.toml
services/dvh-calculator/config/: config.yaml
services/dvh-calculator/src/dvh_calculator/: PostrgresDVHdb.py  XNAT_service.py  __main__.py  config.py  dvh_processor.py  graphdb.py  loading_mask.py  postgres_dvh.py  roi_handler.py
services/dvh-calculator/src/dvh_calculator/API/: retrieve_Data.py
services/dvh-calculator/src/dvh_calculator/Config/: global_var.py
services/dvh-calculator/src/dvh_calculator/DVH/: dicom_bundle.py  dvh.py  output.py
services/imaging-hub/: Dockerfile  entrypoint.sh  pyproject.toml
services/imaging-hub/config/: config.yaml
services/imaging-hub/recipes/: ROI_normalization.yaml  old_recipe.dicom  patient_lookup.csv  recipe.dicom
services/imaging-hub/src/imaging_hub/: __init__.py  __main__.py  api.py  association_tracker.py  background_processor.py  dicom_data.py  nifti_converter.py  queries.py  settings.py  staging.py  store_handler.py
services/imaging-hub/src/imaging_hub/anonymization/: __init__.py  anonymizer.py
services/imaging-hub/tests/: compare_anonymizers.py  conftest.py  test_anonymizer.py
services/pacs-archiver/: Dockerfile  pyproject.toml
services/pacs-archiver/config/: config.yaml
services/pacs-archiver/src/pacs_archiver/: __main__.py  sender.py  verifier.py
services/radiomics-calculator/: Dockerfile  pyproject.toml
services/radiomics-calculator/src/radiomics_calculator/: __main__.py  radiomics_calculator.py  radiomics_results_postgress.py
