[project]
name = "imaging-workspace"
version = "0.0.0"
requires-python = ">=3.12"

dependencies = []

[project.optional-dependencies]
# pydicom <3: v3 breaks file_meta (requires FileMetaDataset), changes VR handling, and drops legacy attrs
send = ["pydicom<3", "pynetdicom"]

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[tool.ruff]
line-length = 120
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "D203",
    "D213",
    "E501",
    "TD002",
    "TD003",
    "TRY003",
    "SIM102",
    "SIM108",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "ANN",
    "N",
    "EM",
    "FBT",
    "PLR",
    "C901",
    "TRY002",
    "DTZ",
    "BLE001",
    "TRY301",
    "SLF001",
    "S608",
    "S105",
    "S104",
    "PLW0603",
    "D205",
    "D415",
    "ARG001",
    "ARG002",
    "INP001",
    "S113",
    "PERF203",
    "TRY300",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = [
    "imaging_common",
    "imaging_hub",
    "dvh_calculator",
    "radiomics_calculator",
    "pacs_archiver",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"**/tests/**" = ["S101"]
"deploy/**" = ["T201", "S603", "S607"]
"services/radiomics-calculator/**" = [
    "COM818", "TRY400", "TRY401",
]
"services/dvh-calculator/**" = [
    "PD011",
    "S112",
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
unused-ignore-comment = "warn"
invalid-return-type = "warn"
invalid-argument-type = "warn"
division-by-zero = "error"
redundant-cast = "warn"
invalid-method-override = "warn"
not-subscriptable = "warn"
call-non-callable = "warn"
unknown-argument = "warn"
unresolved-attribute = "warn"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
]
