[project]
name = "dicom-ingest"
version = "0.1.0"
description = "DICOM ingestion, anonymization, ROI normalization, and data serving"
requires-python = ">=3.12"
dependencies = [
    "imaging-common",
    "pynetdicom",
    "psycopg2-binary",
    "pydicom<3",
    "pyyaml",
    "deid",
    "pandas",
    "requests",
    "fastapi",
    "uvicorn",
    "pydantic",
    "platipy",
    "cryptography",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dicom_ingest"]

[tool.uv.sources]
imaging-common = { workspace = true }
