[project]
name = "dvh-calculator"
version = "0.1.0"
description = "Dose-Volume Histogram calculator for radiotherapy planning"
requires-python = ">=3.12"
dependencies = [
    "imaging-common",
    "pynetdicom",
    "psycopg2-binary>=2.9.6",
    "pydicom<3",
    "pyyaml>=6.0.1",
    "croniter",
    "pandas",
    "rt-utils",
    "dicompyler-core",
    "requests>=2.32.0",
    "uvicorn",
    "fastapi>=0.115.0",
    "xmltodict",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dvh_calculator"]

[tool.uv.sources]
imaging-common = { workspace = true }
