[project]
name = "imaging-hub"
version = "0.1.0"
description = "DICOM ingestion, anonymization, ROI normalization, and data serving"
requires-python = ">=3.12"
dependencies = [
    "imaging-common",
    "pynetdicom",
    "psycopg2-binary>=2.9.6",
    "pydicom<3",
    "pyyaml>=6.0.1",
    "pandas",
    "requests>=2.32.0",
    "fastapi>=0.115.0",
    "uvicorn",
    "pydantic",
    "platipy",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imaging_hub"]

[tool.uv.sources]
imaging-common = { workspace = true }
