[project]
name = "radiomics-calculator"
version = "0.1.0"
description = "Radiomics feature extraction pipeline"
requires-python = ">=3.12"
dependencies = [
    "imaging-common",
    "numpy",
    "pyyaml",
    "croniter",
    "psycopg2-binary>=2.9.6",
    "requests",
    "pydicom<3",
]

[project.optional-dependencies]
runtime = [
    "pyradiomics @ git+https://github.com/AIM-Harvard/pyradiomics.git",
    "simpleitk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/radiomics_calculator"]
